force-app/main/default/objects/ItemNames__c/ItemNames__c.object-meta.xml
<CustomObject>
    <label>Item Names</label>
    <nameField>
        <displayFormat>Lng-{0000}</displayFormat>
        <label>LngNameCode</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>