force-app/main/default/objects/ItemNames__c/fields/ItemNameInLng__c.field-meta.xml
<CustomField>
    <fullName>ItemNameInLng__c</fullName>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>