force-app/main/default/objects/ItemNames__c/fields/ItemShortName__c.field-meta.xml
<CustomField>
    <fullName>ItemShortName__c</fullName>
    <label>Item Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>