force-app/main/default/objects/ItemNames__c/fields/KeyPrefix__c.field-meta.xml
<CustomField>
    <fullName>KeyPrefix__c</fullName>
    <label>Key Prefix</label>
    <length>10</length>
    <type>Text</type>
</CustomField>