force-app/main/default/objects/ItemNames__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>KeyPrefix__c</columns>
    <columns>Object__c</columns>
    <columns>ItemNameInLng__c</columns>
    <columns>Language__c</columns>
    <columns>ItemShortName__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>